--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "question1",
+  "name": "TAIGER",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "s.kelvinjohn@gmail.com",
