--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "postinstall": "if test \"$NODE_ENV\" = \"production\" ; then npm run build ; fi ",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "node build/build.js",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "axios": "^0.18.0",
