--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "TAIGER",
+  "name": "SleekPokedex",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "A Vue.js PokeDex project for Sleek",
   "author": "s.kelvinjohn@gmail.com",
   "private": true,
   "scripts": {
@@ -15,7 +15,8 @@
     "buefy": "^0.6.7",
     "express": "^4.16.3",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -35,7 +36,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -49,6 +50,7 @@
     "semver": "^5.3.0",
     "serve-static": "^1.13.2",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
