--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "buefy": "^0.6.7",
+    "epic-spinners": "^1.0.4",
     "express": "^4.16.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
